# bitshares-core

libraries/plugins/: CMakeLists.txt
libraries/plugins/monitor/: CMakeLists.txt  monitor.cpp
programs/witness_node/: CMakeLists.txt  main.cpp
